Added PackInventory from admin for users and global visuals update in the Frontend
