# Backend_CardDropper/src/main/java/ts/backend_carddropper/models/UserPackInventoryDto.java
@@ -1,0 +1,7 @@
+package ts.backend_carddropper.models;
+
+public record UserPackInventoryDto(
+        Long templateId,
+        String templateName,
+        int quantity
+) {}
