# Frontend_CardDropper/src/app/models/user-pack-inventory.model.ts
@@ -1,0 +1,5 @@
+export interface UserPackInventory {
+  templateId: number;
+  templateName: string;
+  quantity: number;
+}
